增加server端启动参数 snapshot版